[gd_scene load_steps=25 format=3 uid="uid://y48t8dltsrtd"]

[ext_resource type="Texture2D" uid="uid://bag6ddm6o2ool" path="res://AssetBundle/Sprites/Foxy.png" id="1_fysqs"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_iux7r"]
[ext_resource type="AudioStream" uid="uid://cxiy76nymea12" path="res://AssetBundle/Audio/Gun.mp3" id="3_3o0u1"]
[ext_resource type="AudioStream" uid="uid://6vrspqahor31" path="res://AssetBundle/Audio/GameOver.mp3" id="4_qb13w"]
[ext_resource type="AudioStream" uid="uid://cqjkpprq2eb7a" path="res://AssetBundle/Audio/Running.mp3" id="5_veibm"]
[ext_resource type="AudioStream" uid="uid://dfbexogot4135" path="res://AssetBundle/Audio/rolling.mp3" id="6_8efad"]

[sub_resource type="AtlasTexture" id="AtlasTexture_18ton"]
atlas = ExtResource("1_fysqs")
region = Rect2(0, 128, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7gwg"]
atlas = ExtResource("1_fysqs")
region = Rect2(33, 128, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cqpb"]
atlas = ExtResource("1_fysqs")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76qe7"]
atlas = ExtResource("1_fysqs")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dr7j"]
atlas = ExtResource("1_fysqs")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_707p2"]
atlas = ExtResource("1_fysqs")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3ef4"]
atlas = ExtResource("1_fysqs")
region = Rect2(0, 288, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr65n"]
atlas = ExtResource("1_fysqs")
region = Rect2(33, 288, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0chdv"]
atlas = ExtResource("1_fysqs")
region = Rect2(66, 288, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20xon"]
atlas = ExtResource("1_fysqs")
region = Rect2(99, 288, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eao6n"]
atlas = ExtResource("1_fysqs")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t14q"]
atlas = ExtResource("1_fysqs")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7i3w"]
atlas = ExtResource("1_fysqs")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoeac"]
atlas = ExtResource("1_fysqs")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbx2j"]
atlas = ExtResource("1_fysqs")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lspug"]
atlas = ExtResource("1_fysqs")
region = Rect2(165, 32, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3tvr3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18ton")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7gwg")
}],
"loop": true,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cqpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76qe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dr7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_707p2")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3ef4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr65n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0chdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20xon")
}],
"loop": true,
"name": &"roll",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eao6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t14q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7i3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoeac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbx2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lspug")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_y7xwa"]
radius = 9.0

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("player", "reset", "shot_timer", "fire_sound", "game_over_sound", "running_sound", "rolling_sound")]
script = ExtResource("1_iux7r")
player = NodePath("action")
reset = NodePath("reset_scene")
shot_timer = NodePath("shot_cd")
fire_sound = NodePath("shot")
game_over_sound = NodePath("game_over")
running_sound = NodePath("running")
rolling_sound = NodePath("rolling")

[node name="action" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -5)
sprite_frames = SubResource("SpriteFrames_3tvr3")
animation = &"death"
autoplay = "idle"
frame_progress = 0.686546

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y7xwa")

[node name="shot_cd" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="shot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3o0u1")
volume_db = -5.0
pitch_scale = 0.9

[node name="game_over" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qb13w")
volume_db = 1.0

[node name="running" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_veibm")
volume_db = 0.5

[node name="rolling" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_8efad")
volume_db = -0.5
pitch_scale = 3.0

[node name="reset_scene" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="shot_cd" to="." method="_on_shot_cd_timeout"]
[connection signal="timeout" from="reset_scene" to="." method="reset_scene"]
